--- a/tutorial_nn.html
+++ b/tutorial_nn.html
@@ -87,9 +87,6 @@
         <!--================Blog Area =================-->
         <section class="blog_area">
             <div class="container">
-              <div class="main_title discourse">
-          			<p> <img src="img/logo_discourse.png"/> Join our official <a href="https://speechbrain.discourse.group">Discourse</a> to discuss with SpeechBrain users coming from all around the world! <img src="img/logo_discourse.png"/></p>
-          		</div>
                 <div class="row">
                     <div class="col-md-9">
                         <div class="blog_left_sidebar">
@@ -101,20 +98,19 @@
                                           <a class="active" href="#">Neural Architectures</a>
                                       </div>
                                       <ul class="blog_meta list">
-                                          <li><a href="about.html">Parcollet T.<i class="lnr lnr-user"></i></a></li>
-                                          <li><a href="#">April. 2021<i class="lnr lnr-calendar-full"></i></a></li>
+                                          <li><a href="about.html">Parcollet T. & Moumen A.<i class="lnr lnr-user"></i></a></li>
+                                          <li><a href="#">Dec. 2022<i class="lnr lnr-calendar-full"></i></a></li>
                                           <li><a href="#">Difficulty: medium<i class="lnr lnr-cog"></i></a></li>
-                                          <li><a href="#">Time: 10min<i class="lnr lnr-hourglass"></i></a></li>
+                                          <li><a href="#">Time: 20m<i class="lnr lnr-hourglass"></i></a></li>
                                       </ul>
                                   </div>
                              </div>
                               <div class="col-md-9">
                                 <div class="blog_post">
                                     <div class="blog_details">
-                                        <h2>Using Wav2Vec 2.0 from HuggingFace and Fairseq with SpeechBrain</h2>
-                                        <p>This tutorial describes how to combine (use and finetune) pretrained wav2vec2 models
-                                          coming both from fairseq or HuggingFace. Any wav2vec 2.0 model trained with the fairseq
-                                          toolkit or integrated to the transformers interface of HuggingFace can be then plugged to
+                                        <h2>Using Wav2Vec 2.0 / HuBERT / WavLM and Whisper from HuggingFace with SpeechBrain</h2>
+                                        <p>This tutorial describes how to combine (use and finetune) pretrained models
+                                          coming from HuggingFace. Any wav2vec 2.0 / HuBERT / WavLM or Whisper model integrated to the transformers interface of HuggingFace can be then plugged to
                                           SpeechBrain to approach a speech-related task: automatic speech recognition, speaker recognition,
                                           spoken language understanding ...</p>
                                         <a href="https://colab.research.google.com/drive/17Hu1pxqhfMisjkSgmM2CnZxfqDyn2hSY?usp=sharing" class="blog_btn">Open in Google Colab</a>
