--- a/sb_summit2023.html
+++ b/sb_summit2023.html
@@ -130,32 +130,165 @@
                 </p>
 
                 <h3>Invited Speakers from Industry</h3>
-                <p class="justified large">
-                <b>•</b> UbenwaAI (confirmed) <br/><br/>
-                <b>•</b> ViaDialog (to be confirmed) <br/><br/>
-                <b>•</b> J.P. Morgan (confirmed) <br/><br/>
-                <b>•</b> Orange Labs (confirmed) <br/><br/>
-                </p>
-
+            </div>
+            <div class="speaker-cards">
+                <div class="speaker-card">
+                <div class="speaker-image mx-auto">
+                    <img src=".">
+                </div>
+                <div class="speaker-info">
+                    <h3 class="justified">Peter Plantiga, J.P. Morgan</h3>
+                    <p class="justified">Continual Learning for End-to-End ASR by Averaging Domain Experts.</p>
+                    <p class="justified">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada velit eget sapien auctor, a luctus odio varius. Donec commodo consequat risus, at congue lectus commodo id. Ut vulputate commodo justo, nec malesuada purus vulputate eu. Phasellus consectetur turpis vitae odio pharetra, non commodo sapien commodo.
+                    </p>
+                </div>
+                </div>
+                <div class="speaker-card">
+                    <div class="speaker-image mx-auto">
+                        <img src=".">
+                    </div>
+                    <div class="speaker-info">
+                        <h3 class="justified">X, ViaDialog</h3>
+                        <p class="justified">Title</p>
+                        <p class="justified">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada velit eget sapien auctor, a luctus odio varius. Donec commodo consequat risus, at congue lectus commodo id. Ut vulputate commodo justo, nec malesuada purus vulputate eu. Phasellus consectetur turpis vitae odio pharetra, non commodo sapien commodo.
+                        </p>
+                    </div>
+                    </div>
+                </div>
+            </div>
+            <div class="speaker-cards">
+                <div class="speaker-card">
+                <div class="speaker-image mx-auto">
+                    <img src=".">
+                </div>
+                <div class="speaker-info">
+                    <h3 class="justified">X, UbenwaAI</h3>
+                    <p class="justified">Continual Learning for End-to-End ASR by Averaging Domain Experts.</p>
+                    <p class="justified">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada velit eget sapien auctor, a luctus odio varius. Donec commodo consequat risus, at congue lectus commodo id. Ut vulputate commodo justo, nec malesuada purus vulputate eu. Phasellus consectetur turpis vitae odio pharetra, non commodo sapien commodo.
+                    </p>
+                </div>
+                </div>
+                <div class="speaker-card">
+                    <div class="speaker-image mx-auto">
+                        <img src=".">
+                    </div>
+                    <div class="speaker-info">
+                        <h3 class="justified">X, Orange Labs</h3>
+                        <p class="justified">Title</p>
+                        <p class="justified">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada velit eget sapien auctor, a luctus odio varius. Donec commodo consequat risus, at congue lectus commodo id. Ut vulputate commodo justo, nec malesuada purus vulputate eu. Phasellus consectetur turpis vitae odio pharetra, non commodo sapien commodo.
+                        </p>
+                    </div>
+                    </div>
+                </div>
+            </div>
+            <div class="main_title">
                 <h3>Invited speakers from the academia</h3>
-                <p class="justified large">
-                <b>•</b> Yannick Estève (Université Avignon, confirmed) <br/><br/>
-                <b>•</b> Yan Gao (University of Cambridge, Federated Speech with Flower and
-                SpeechBrain, confirmed) <br/><br/>
-                </p>
-
-
+            </div>
+                
+            <div class="speaker-cards">
+                <div class="speaker-card">
+                <div class="speaker-image mx-auto">
+                    <img src="./img/summit/yan_gao.jpg">
+                </div>
+                <div class="speaker-info">
+                    <h3 class="justified">Yan Gao</h3>
+                    <p class="justified">Federated self-supervised speech representation learning.</p>
+                    <p class="justified">Yan Gao is a final-year PhD student in Machine Learning System lab at the University of Cambridge, supervised by Prof Nicholas Lane. His research interests are in machine learning, deep learning, optimisation. His recent topics are in federated learning with self-supervised learning on audio and vision data.</p>
+                </div>
+                </div>
+                <div class="speaker-card">
+                    <div class="speaker-image mx-auto">
+                        <img src=".">
+                    </div>
+                    <div class="speaker-info">
+                        <h3 class="justified">Yannick Estève</h3>
+                        <p class="justified">Title</p>
+                        <p class="justified">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada velit eget sapien auctor, a luctus odio varius. Donec commodo consequat risus, at congue lectus commodo id. Ut vulputate commodo justo, nec malesuada purus vulputate eu. Phasellus consectetur turpis vitae odio pharetra, non commodo sapien commodo.
+                        </p>
+                    </div>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="main_title">
                 <h3>Invited Panel Discussions include</h3>
-                <p class="justified large">
-                <b>•</b> Shinji Watanabe (ESPNet, Tentatively confirmed) <br/><br/>
-                <b>•</b> Dan Povey (Kaldi, confirmed) <br/><br/>
-                <b>•</b> Brian McFee (Librosa, confirmed) <br/><br/>
-                <b>•</b> Boris Ginsburg (NeMO, confirmed) <br/><br/>
-                <b>•</b> Zhaoheng Ni (Torchaudio, confirmed) <br/><br/>
-                </p>
+            </div>
+
+            <div class="speaker-cards">
+                <div class="speaker-card">
+                  <div class="speaker-image mx-auto">
+                      <img src=".">
+                  </div>
+                  <div class="speaker-info">
+                      <h3 class="justified">Shinji Watanabe, ESPNet</h3>
+                    <p class="justified">Title</p>
+                    <p class="justified">
+                        Shinji Watanabe is an Associate Professor at Carnegie Mellon University, Pittsburgh, PA. He received his B.S., M.S., and Ph.D. (Dr. Eng.) degrees from Waseda University, Tokyo, Japan. He was a research scientist at NTT Communication Science Laboratories, Kyoto, Japan, from 2001 to 2011, a visiting scholar at Georgia institute of technology, Atlanta, GA, in 2009, and a senior principal research scientist at Mitsubishi Electric Research Laboratories (MERL), Cambridge, MA USA from 2012 to 2017. Before Carnegie Mellon University, he was an associate research professor at Johns Hopkins University, Baltimore, MD, USA, from 2017 to 2020. His research interests include automatic speech recognition, speech enhancement, spoken language understanding, and machine learning for speech and language processing. He has published over 300 papers in peer-reviewed journals and conferences and received several awards, including the best paper award from the IEEE ASRU in 2019. He is a Senior Area Editor of the IEEE Transactions on Audio Speech and Language Processing. He was/has been a member of several technical committees, including the APSIPA Speech, Language, and Audio Technical Committee (SLA), IEEE Signal Processing Society Speech and Language Technical Committee (SLTC), and Machine Learning for Signal Processing Technical Committee (MLSP). He is an IEEE and ISCA Fellow.</p>
+                  </div>
+                </div>
+                  <div class="speaker-card">
+                      <div class="speaker-image mx-auto">
+                          <img src=".">
+                      </div>
+                      <div class="speaker-info">
+                          <h3 class="justified">Dan Povey, Kaldi</h3>
+                          <p class="justified">Title</p>
+                          <p class="justified">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada velit eget sapien auctor, a luctus odio varius. Donec commodo consequat risus, at congue lectus commodo id. Ut vulputate commodo justo, nec malesuada purus vulputate eu. Phasellus consectetur turpis vitae odio pharetra, non commodo sapien commodo.
+                          </p>
+                      </div>
+                    </div>
+                </div>
+              </div>
+              <div class="speaker-cards">
+                <div class="speaker-card">
+                  <div class="speaker-image mx-auto">
+                      <img src=".">
+                  </div>
+                  <div class="speaker-info">
+                      <h3 class="justified">Brian McFee, Librosa</h3>
+                    <p class="justified">Title</p>
+                    <p class="justified">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada velit eget sapien auctor, a luctus odio varius. Donec commodo consequat risus, at congue lectus commodo id. Ut vulputate commodo justo, nec malesuada purus vulputate eu. Phasellus consectetur turpis vitae odio pharetra, non commodo sapien commodo.
+                    </p>
+                  </div>
+                </div>
+                  <div class="speaker-card">
+                      <div class="speaker-image mx-auto">
+                          <img src=".">
+                      </div>
+                      <div class="speaker-info">
+                          <h3 class="justified">Boris Ginsburg, Nemo</h3>
+                          <p class="justified">Title</p>
+                          <p class="justified">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada velit eget sapien auctor, a luctus odio varius. Donec commodo consequat risus, at congue lectus commodo id. Ut vulputate commodo justo, nec malesuada purus vulputate eu. Phasellus consectetur turpis vitae odio pharetra, non commodo sapien commodo.
+                          </p>
+                      </div>
+                    </div>
+                </div>
+              </div>
+              <div class="speaker-cards">
+                <div class="speaker-card">
+                  <div class="speaker-image mx-auto">
+                      <img src=".">
+                  </div>
+                  <div class="speaker-info">
+                      <h3 class="justified">Zhaoheng Ni, Torchaudio</h3>
+                    <p class="justified">Title</p>
+                    <p class="justified">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada velit eget sapien auctor, a luctus odio varius. Donec commodo consequat risus, at congue lectus commodo id. Ut vulputate commodo justo, nec malesuada purus vulputate eu. Phasellus consectetur turpis vitae odio pharetra, non commodo sapien commodo.
+                    </p>
+                  </div>
+                </div>
             </div>
 
         <div class="main_title">
+            <br>
             <h2>Organizing Commitee</h2>
             <p class="justified large">
             <b>•</b> Titouan Parcollet (SpeechBrain, Samsung AI Cambridge) <br/><br/>
