--- a/sb_summit2023.html
+++ b/sb_summit2023.html
@@ -129,7 +129,7 @@
                     <b>•</b> 15.45 - 16.00 Final Remarks, Closing <br/><br/>
                 </p>
 
-                <h3>Invited Speakers from Industry</h3>
+                <h3>Invited Speakers</h3>
             </div>
             <div class="speaker-cards">
                 <div class="speaker-card">
@@ -184,9 +184,6 @@
                     </div>
                     </div>
                 </div>
-            </div>
-            <div class="main_title">
-                <h3>Invited speakers from the academia</h3>
             </div>
                 
             <div class="speaker-cards">
@@ -290,15 +287,93 @@
         <div class="main_title">
             <br>
             <h2>Organizing Commitee</h2>
-            <p class="justified large">
-            <b>•</b> Titouan Parcollet (SpeechBrain, Samsung AI Cambridge) <br/><br/>
-            <b>•</b> Mirco Ravanelli (SpeechBrain, Concordia University) <br/><br/>
-            <b>•</b> Cem Subakan (SpeechBrain, Université Laval) <br/><br/>
-            <b>•</b> François Grondin (SpeechBrain, Université Sherbrooke) <br/><br/>
-            <b>•</b> Adel Moumen (SpeechBrain, Université d'Avignon) <br/><br/>
-            <b>•</b> Andreas Nautsch (SpeechBrain, Université d'Avignon) <br/><br/>
-            </p>
         </div>
+
+
+        <div class="speaker-cards">
+            <div class="speaker-card">
+              <div class="speaker-image mx-auto">
+                  <img src=".">
+              </div>
+              <div class="speaker-info">
+                  <h3 class="justified">Titouan Parcollet (SpeechBrain, Samsung AI Cambridge)</h3>
+                <p class="justified">Title</p>
+                <p class="justified">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada velit eget sapien auctor, a luctus odio varius. Donec commodo consequat risus, at congue lectus commodo id. Ut vulputate commodo justo, nec malesuada purus vulputate eu. Phasellus consectetur turpis vitae odio pharetra, non commodo sapien commodo.
+                </p>
+              </div>
+            </div>
+              <div class="speaker-card">
+                  <div class="speaker-image mx-auto">
+                      <img src=".">
+                  </div>
+                  <div class="speaker-info">
+                      <h3 class="justified">Mirco Ravanelli (SpeechBrain, Concordia University)</h3>
+                      <p class="justified">Title</p>
+                      <p class="justified">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada velit eget sapien auctor, a luctus odio varius. Donec commodo consequat risus, at congue lectus commodo id. Ut vulputate commodo justo, nec malesuada purus vulputate eu. Phasellus consectetur turpis vitae odio pharetra, non commodo sapien commodo.
+                      </p>
+                  </div>
+                </div>
+            </div>
+          </div>
+          <div class="speaker-cards">
+            <div class="speaker-card">
+              <div class="speaker-image mx-auto">
+                  <img src=".">
+              </div>
+              <div class="speaker-info">
+                  <h3 class="justified">Cem Subakan (SpeechBrain, Université Laval)</h3>
+                <p class="justified">Title</p>
+                <p class="justified">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada velit eget sapien auctor, a luctus odio varius. Donec commodo consequat risus, at congue lectus commodo id. Ut vulputate commodo justo, nec malesuada purus vulputate eu. Phasellus consectetur turpis vitae odio pharetra, non commodo sapien commodo.
+                </p>
+              </div>
+            </div>
+            <div class="speaker-card">
+                <div class="speaker-image mx-auto">
+                    <img src=".">
+                </div>
+                <div class="speaker-info">
+                    <h3 class="justified">Andreas Nautsch (SpeechBrain, Université d'Avignon)</h3>
+                <p class="justified">Title</p>
+                <p class="justified">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada velit eget sapien auctor, a luctus odio varius. Donec commodo consequat risus, at congue lectus commodo id. Ut vulputate commodo justo, nec malesuada purus vulputate eu. Phasellus consectetur turpis vitae odio pharetra, non commodo sapien commodo.
+                </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="speaker-cards">
+            <div class="speaker-card">
+              <div class="speaker-image mx-auto">
+                  <img src=".">
+              </div>
+              <div class="speaker-info">
+                  <h3 class="justified">François Grondin (SpeechBrain, Université Sherbrooke)</h3>
+                <p class="justified">Title</p>
+                <p class="justified">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada velit eget sapien auctor, a luctus odio varius. Donec commodo consequat risus, at congue lectus commodo id. Ut vulputate commodo justo, nec malesuada purus vulputate eu. Phasellus consectetur turpis vitae odio pharetra, non commodo sapien commodo.
+                </p>
+              </div>
+            </div>
+              <div class="speaker-card">
+                  <div class="speaker-image mx-auto">
+                      <img src=".">
+                  </div>
+                  <div class="speaker-info">
+                      <h3 class="justified">Adel Moumen (SpeechBrain, Université d'Avignon)</h3>
+                      <p class="justified">Title</p>
+                      <p class="justified">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada velit eget sapien auctor, a luctus odio varius. Donec commodo consequat risus, at congue lectus commodo id. Ut vulputate commodo justo, nec malesuada purus vulputate eu. Phasellus consectetur turpis vitae odio pharetra, non commodo sapien commodo.
+                      </p>
+                  </div>
+                </div>
+            </div>
+          </div>
+
+
+       
 
         </section>  
         <!--================End Work Area =================-->
