Reduce margin for brain icon, move github and discord widgets into new row

--- a/index.html
+++ b/index.html
@@ -86,18 +86,21 @@
 								<a class="banner_btn" href="tutorial_basics.html">Get Started</a>
 								<a class="banner_btn2" href="https://github.com/speechbrain/speechbrain">GitHub</a>
 								<a class="banner_btn4" href="https://huggingface.co/speechbrain"><img src="img/hf.svg" style="width:40px"/></a>
-								<iframe src="https://ghbtns.com/github-btn.html?user=speechbrain&repo=speechbrain&type=star&count=true&size=large&v=2" frameborder="0" scrolling="0" width="170" height="30" title="GitHub"></iframe>
-                                <a href="https://discord.gg/3wYvAaz3Ck"><img src="https://dcbadge.vercel.app/api/server/3wYvAaz3Ck?style=flat" /></a>
-		<br><br> <a href="https://drive.google.com/file/d/1Ig9KRzQ--H-0ugmz2UXA_pdxTuLBGhtk/view?usp=sharing""><font size="+1"> The call for Sponsors 2023 is open!</font></a>
-
 							</div>
 						</div>
 						<div class="col-lg-5">
 							<div class="home_left_img">
-								<img class="img-fluid" src="img/speechbrain-round-logo.svg" style="max-height:300px"alt="">
+								<img class="img-fluid" style="margin-bottom: -20%; max-height:300px" src="img/speechbrain-round-logo.svg" alt="">
 							</div>
 						</div>
 					</div>
+                    <div class="row">
+                        <div class="col-lg-4" style="margin-top: 8px;">
+                            <iframe src="https://ghbtns.com/github-btn.html?user=speechbrain&repo=speechbrain&type=star&count=true&size=large&v=2" frameborder="0" scrolling="0" width="170" height="30" title="GitHub"></iframe>
+                            <a href="https://discord.gg/3wYvAaz3Ck"><img style="margin-top: -30px; margin-left: -15px" src="https://dcbadge.vercel.app/api/server/3wYvAaz3Ck?style=flat" /></a>
+                        </div>
+
+                    </div>
 				</div>
 
       </div>
