Restore call for sponsors drive link

--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
                         </div>
 
                     </div>
+                    <div class="row" >
+                        <div class="col-lg-12" style="margin-top: 10px;" >
+                            <a href="https://drive.google.com/file/d/1Ig9KRzQ--H-0ugmz2UXA_pdxTuLBGhtk/view?usp=sharing"><font size="+1"> The call for Sponsors 2023 is open!</font></a>
+                        </div>
+                    </div>
 				</div>
 
       </div>
